--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -34,12 +34,13 @@ html, body {
 	font-family: 'Markazi Text';
 	font-size: 4rem;
 	font-weight: 500;
-	line-height: 1;
+	line-height: 3rem;
 }
 .subtitle {
 	font-family: 'Markazi Text';
 	font-size: 2.5rem;
 	font-weight: 400;
+	line-height: 2.25rem;
 }
 .lead-text {
 	font-family: 'Karla';
@@ -116,7 +117,7 @@ html, body {
 }
 .global-footer .column a:hover {
 	color: var(--color-primary);
-	/* text-decoration: underline; */
+	text-decoration: underline;
 }
 @media (min-width: 640px) {
 	.global-footer .container {
@@ -148,24 +149,82 @@ main {
 	display: flex;
 }
 
-.page-section figure {
+.feature-section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap:1rem;
+	padding: 2rem 0;
+	width: 100%;
+}
+.feature-section header {
+	color: white;
+	display: flex;
+	flex-direction: column;
+	gap: .5rem;
+}
+
+.feature-section .content {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+.feature-section .content a {
+	color: var(--color-secondary);
+	transition: color .2s ease-out;
+	
+}
+.feature-section .content a:hover {
+	color: white;
+	text-decoration: underline;
+}
+
+.feature-section .images{
+	padding: 2rem 0;
+}
+.feature-section figure {
 	overflow: hidden;
 	border-radius: var(--border-md);
 	margin-left: 2rem;
 }
-.page-section figure:last-of-type {
+
+.feature-section figure:last-of-type {
 	position: absolute;
 	bottom: -2rem;
 	left: -3rem;
-	/* right: -3rem; */
-	box-shadow: var(--color-dark) .25rem .25rem .5rem;
+	box-shadow: rgba(0, 0, 0, .6) .25rem .25rem .5rem;
 }
-.page-section figure:last-of-type img {
+.feature-section figure img {
+	width: 100%;
+	max-width: 28rem;
+	min-width: 16rem;
+	height: auto;
+}
+.feature-section figure:last-of-type img {
 	aspect-ratio: 5/4;
 	object-fit: cover;
 	object-position: center;
 	width: 100%;
+	max-width: 10rem;
+	min-width: 8rem;
 	height: 100%;
+}
+
+.feature-section p {
+	padding-right: 1rem;
+}
+
+@media (min-width: 640px) {
+	.feature-section {
+		flex-direction: row;
+	}
+	.feature-section .images{
+		padding: 0;
+	}
+	.feature-section p {
+		padding-right: 2rem;
+	}
 }
 
 .modal {
