--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,8 +17,8 @@
 
 	/* border radius */
 	--border-rounded: .5rem;
-	--border-md: .5rem;
-	--border-lg: 1rem;
+	--rounded-md: .5rem;
+	--rounded-lg: 1rem;
 
 }
 
@@ -70,6 +70,33 @@ html, body {
 	font-size: 1rem;
 	font-weight: 500;
 }
+
+/* Buttons */
+.button {
+	display: flex;
+	align-items: center;
+	width: max-content;
+	padding: .5rem 1rem;
+	border-radius: var(--rounded-md);
+	color: white;
+	background: var(--color-primary);
+	font-weight: 500;	
+	transition: color .2s ease-out;
+}
+.button:hover {
+	color: white;
+	background: var(--color-dark);
+}
+.button--secondary {
+	color: black;
+	background: var(--color-secondary);
+}
+.button--secondary:hover {
+	color: black;
+	background: var(--color-tan);
+}
+
+
 
 .global-header {
 	display: flex;
@@ -149,6 +176,8 @@ main {
 	display: flex;
 }
 
+
+/* Feature Section */
 .feature-section {
 	display: flex;
 	flex-direction: column;
@@ -191,7 +220,7 @@ main {
 }
 .feature-section figure {
 	overflow: hidden;
-	border-radius: var(--border-md);
+	border-radius: var(--rounded-md);
 	margin-left: 2rem;
 }
 
@@ -233,6 +262,52 @@ main {
 	}
 }
 
+/* Cards Section */
+.cards-section {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	color: black;
+	padding: 2rem 0;
+}
+
+.cards-section header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+}
+
+.cards-section .content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 1rem;
+	width: 100%;
+}
+@media (min-width: 640px) {
+	.cards-section header .cta {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: end;
+	}
+	.cards-section header {
+		flex-direction: row;
+		align-items: center;
+		/* justify-content: space-between; */
+		justify-content: center;
+	}
+	.cards-section .content {
+		flex-direction: row;
+		align-items: flex-start;
+		justify-content: space-evenly;
+	}
+
+}
+
+/* Booking Modal */
 .modal {
 	width: 100%;
 	max-width: 36rem;
