--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -20,6 +20,9 @@
 	--rounded-md: .5rem;
 	--rounded-lg: 1rem;
 
+	/* box shadow */
+	--shadow-md: rgba(0,0,0,0.25) .125rem .125rem 6px;
+	--shadow-lg: rgba(0,0,0,0.3) .25rem .25rem 8px;
 }
 
 html, body {
@@ -175,7 +178,9 @@ main {
 	width: 100%;
 	display: flex;
 }
-
+.page-section .container {
+	margin: 0 auto;
+}
 
 /* Feature Section */
 .feature-section {
@@ -296,9 +301,10 @@ main {
 	.cards-section header {
 		flex-direction: row;
 		align-items: center;
-		/* justify-content: space-between; */
 		justify-content: center;
 	}
+}
+@media (min-width: 768px) {
 	.cards-section .content {
 		flex-direction: row;
 		align-items: flex-start;
@@ -306,6 +312,32 @@ main {
 	}
 
 }
+
+/* Card */
+.card {
+	/*  hover:shadow-lg cursor-pointer transition-all */
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	width: 100%; 
+	overflow: hidden;
+	border-radius: var(--rounded-lg);
+	box-shadow: var(--shadow-md);
+	padding-bottom: 1rem;
+	align-items: start;
+	justify-content: start;
+	max-width: 24rem;
+	background: var(--color-light);
+	transition: all .2s ease-out;
+}
+
+.card--link {
+	cursor: pointer;
+}
+.card--link:hover {
+	box-shadow: var(--shadow-lg);
+}
+
 
 /* Booking Modal */
 .modal {
