--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -83,7 +83,7 @@ html, body {
 	border-radius: var(--rounded-md);
 	color: white;
 	background: var(--color-primary);
-	font-weight: 500;	
+	font-weight: 500;
 	transition: color .2s ease-out;
 }
 .button:hover {
@@ -98,6 +98,18 @@ html, body {
 	color: black;
 	background: var(--color-tan);
 }
+.button--link {
+	padding-left: 0;
+	padding-right: 0;
+	background: transparent;
+	color: var(--color-primary);
+}
+.button--link:hover {
+	text-decoration: underline;
+	background: transparent;
+	color: black;
+}
+
 
 
 
@@ -315,27 +327,40 @@ main {
 
 /* Card */
 .card {
-	/*  hover:shadow-lg cursor-pointer transition-all */
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
-	width: 100%; 
-	overflow: hidden;
-	border-radius: var(--rounded-lg);
-	box-shadow: var(--shadow-md);
-	padding-bottom: 1rem;
 	align-items: start;
 	justify-content: start;
+	gap: 1rem;
+	width: 100%;
 	max-width: 24rem;
+	overflow: hidden;
+	padding-bottom: 1rem;
+	border-radius: var(--rounded-lg);
+	box-shadow: var(--shadow-md);
 	background: var(--color-light);
 	transition: all .2s ease-out;
 }
-
 .card--link {
 	cursor: pointer;
 }
 .card--link:hover {
 	box-shadow: var(--shadow-lg);
+}
+
+.card-image img {
+	width: 100%;
+	aspect-ratio: 4/3;
+	object-fit: cover;
+}
+
+.card-header,
+.card-body,
+.card-footer {
+	padding: 0 1rem;
+}
+.card-body p {
+	margin-bottom: .5rem;
 }
 
 
