--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -84,7 +84,7 @@ html, body {
 	color: white;
 	background: var(--color-primary);
 	font-weight: 500;
-	transition: color .2s ease-out;
+	transition: all .2s ease-out;
 }
 .button:hover {
 	color: white;
@@ -186,7 +186,7 @@ main {
 }
 
 .page-section {
-	padding: 2rem;
+	padding: 4rem 2rem;
 	width: 100%;
 	display: flex;
 }
@@ -300,7 +300,7 @@ main {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	gap: 1rem;
+	gap: 2rem;
 	width: 100%;
 }
 @media (min-width: 640px) {
@@ -321,19 +321,23 @@ main {
 		flex-direction: row;
 		align-items: flex-start;
 		justify-content: space-evenly;
+		flex: 1;
 	}
 
 }
 
 /* Card */
 .card {
+	/* flex: 1; */
+	align-self: stretch;
 	display: flex;
 	flex-direction: column;
 	align-items: start;
 	justify-content: start;
 	gap: 1rem;
-	width: 100%;
-	max-width: 24rem;
+	/* width: 100%; */
+	/* max-width: 24rem; */
+	width: 50%;
 	overflow: hidden;
 	padding-bottom: 1rem;
 	border-radius: var(--rounded-lg);
@@ -359,9 +363,13 @@ main {
 .card-footer {
 	padding: 0 1rem;
 }
+.card-body {
+	flex-grow: 1;
+}
 .card-body p {
 	margin-bottom: .5rem;
 }
+
 
 
 /* Booking Modal */
