convert TW classes to CSS

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -112,7 +112,7 @@ html, body {
 
 
 
-
+/* Header */
 .global-header {
 	display: flex;
 	align-items: center;
@@ -120,6 +120,95 @@ html, body {
 	justify-content: space-between;
 	padding: 1rem;
 	margin: 0 auto;
+}
+.global-header .logo {
+	width: 100%;
+	max-width: 9rem;
+	height: auto;
+}
+.global-header .mobile-links {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+}
+.global-header .nav-toggle {
+	display: inline-block;
+	color: var(--color-dark);
+	padding: .5rem;
+	border-radius: var(--rounded-md);
+	transition: all .2s ease;
+}
+.global-header .nav-toggle:hover {
+	background: var(--color-dark);
+	color: var(--color-light);
+}
+.global-header .nav-toggle .icon {
+	width: 1.5rem;
+	height: 1.5rem;
+	color: inherit;
+}
+
+.global-header nav {
+	width: 100%;
+	transition: all .5s ease;
+	overflow: hidden;
+	position: absolute;
+	top: -3rem;
+	right: 0;
+	background: white;
+}
+
+.global-header nav.nav--open {
+	top: 4rem;
+	height: 100vh;
+	opacity: 1;
+}
+.global-header nav.nav--closed {
+	height: 0;
+	opacity: 0;
+}
+.global-header .nav-links {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	align-items: center;
+	justify-content: end;
+}
+.global-header .nav-links a {
+	color: var(--color-dark);
+	transition: all .2s ease-out;
+}
+.global-header .nav-links a:hover,
+.global-header .nav-links a.is-active {
+	color: var(--color-primary);
+	text-decoration: underline;
+}
+
+@media (min-width: 768px) {
+	.global-header .logo {
+		max-width: 12rem;
+	}
+	.global-header .mobile-links {
+		display: none;
+	}
+	.global-header nav {
+		position: relative;
+		top: 0;
+		right: unset;
+		opacity: 1;
+	}
+	.global-header nav.nav--closed {
+		height: auto;
+		opacity: 1;
+	}
+	.global-header nav.nav--open {
+		top: unset;
+		height: auto;
+		opacity: 1;
+	}
+	.global-header .nav-links {
+		flex-direction: row;
+	}
 }
 
 /* Footer */
@@ -249,7 +338,7 @@ main {
 }
 .feature-section figure img {
 	width: 100%;
-	max-width: 28rem;
+	max-width: 32rem;
 	min-width: 16rem;
 	height: auto;
 }
@@ -320,7 +409,7 @@ main {
 	.cards-section .content {
 		flex-direction: row;
 		align-items: flex-start;
-		justify-content: space-evenly;
+		justify-content: space-between;
 		flex: 1;
 	}
 
@@ -328,16 +417,12 @@ main {
 
 /* Card */
 .card {
-	/* flex: 1; */
-	align-self: stretch;
 	display: flex;
 	flex-direction: column;
 	align-items: start;
 	justify-content: start;
 	gap: 1rem;
-	/* width: 100%; */
-	/* max-width: 24rem; */
-	width: 50%;
+	width: 100%;
 	overflow: hidden;
 	padding-bottom: 1rem;
 	border-radius: var(--rounded-lg);
@@ -369,7 +454,12 @@ main {
 .card-body p {
 	margin-bottom: .5rem;
 }
-
+@media (min-width: 640px) {
+	.card {
+		align-self: stretch;
+		max-width: 30rem;
+	}
+}
 
 
 /* Booking Modal */
