--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,9 +17,12 @@
 
 	/* border radius */
 	--border-rounded: .5rem;
-	--border-md: .5rem;
-	--border-lg: 1rem;
+	--rounded-md: .5rem;
+	--rounded-lg: 1rem;
 
+	/* box shadow */
+	--shadow-md: rgba(0,0,0,0.25) .125rem .125rem 6px;
+	--shadow-lg: rgba(0,0,0,0.3) .25rem .25rem 8px;
 }
 
 html, body {
@@ -34,11 +37,13 @@ html, body {
 	font-family: 'Markazi Text';
 	font-size: 4rem;
 	font-weight: 500;
+	line-height: 3rem;
 }
 .subtitle {
 	font-family: 'Markazi Text';
 	font-size: 2.5rem;
 	font-weight: 400;
+	line-height: 2.25rem;
 }
 .lead-text {
 	font-family: 'Karla';
@@ -69,13 +74,141 @@ html, body {
 	font-weight: 500;
 }
 
-header {
+/* Buttons */
+.button {
+	display: flex;
+	align-items: center;
+	width: max-content;
+	padding: .5rem 1rem;
+	border-radius: var(--rounded-md);
+	color: white;
+	background: var(--color-primary);
+	font-weight: 500;
+	transition: all .2s ease-out;
+}
+.button:hover {
+	color: white;
+	background: var(--color-dark);
+}
+.button--secondary {
+	color: black;
+	background: var(--color-secondary);
+}
+.button--secondary:hover {
+	color: black;
+	background: var(--color-tan);
+}
+.button--link {
+	padding-left: 0;
+	padding-right: 0;
+	background: transparent;
+	color: var(--color-primary);
+}
+.button--link:hover {
+	text-decoration: underline;
+	background: transparent;
+	color: black;
+}
+
+
+
+/* Header */
+.global-header {
 	display: flex;
 	align-items: center;
 	width: 100%;
 	justify-content: space-between;
 	padding: 1rem;
 	margin: 0 auto;
+}
+.global-header .logo {
+	width: 100%;
+	max-width: 9rem;
+	height: auto;
+}
+.global-header .mobile-links {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+}
+.global-header .nav-toggle {
+	display: inline-block;
+	color: var(--color-dark);
+	padding: .5rem;
+	border-radius: var(--rounded-md);
+	transition: all .2s ease;
+}
+.global-header .nav-toggle:hover {
+	background: var(--color-dark);
+	color: var(--color-light);
+}
+.global-header .nav-toggle .icon {
+	width: 1.5rem;
+	height: 1.5rem;
+	color: inherit;
+}
+
+.global-header nav {
+	width: 100%;
+	transition: all .5s ease;
+	overflow: hidden;
+	position: absolute;
+	top: -3rem;
+	right: 0;
+	background: white;
+}
+
+.global-header nav.nav--open {
+	top: 4rem;
+	height: 100vh;
+	opacity: 1;
+}
+.global-header nav.nav--closed {
+	height: 0;
+	opacity: 0;
+}
+.global-header .nav-links {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	align-items: center;
+	justify-content: end;
+}
+.global-header .nav-links a {
+	color: var(--color-dark);
+	transition: all .2s ease-out;
+}
+.global-header .nav-links a:hover,
+.global-header .nav-links a.is-active {
+	color: var(--color-primary);
+	text-decoration: underline;
+}
+
+@media (min-width: 768px) {
+	.global-header .logo {
+		max-width: 12rem;
+	}
+	.global-header .mobile-links {
+		display: none;
+	}
+	.global-header nav {
+		position: relative;
+		top: 0;
+		right: unset;
+		opacity: 1;
+	}
+	.global-header nav.nav--closed {
+		height: auto;
+		opacity: 1;
+	}
+	.global-header nav.nav--open {
+		top: unset;
+		height: auto;
+		opacity: 1;
+	}
+	.global-header .nav-links {
+		flex-direction: row;
+	}
 }
 
 /* Footer */
@@ -115,7 +248,7 @@ header {
 }
 .global-footer .column a:hover {
 	color: var(--color-primary);
-	/* text-decoration: underline; */
+	text-decoration: underline;
 }
 @media (min-width: 640px) {
 	.global-footer .container {
@@ -130,14 +263,7 @@ header {
 	}
 }
 
-#root {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	gap: 0;
-	align-items: start;
-	justify-content: flex-start;
-}
+
 
 main {
 	display: flex;
@@ -145,12 +271,198 @@ main {
 	gap: 0;
 	align-items: start;
 	justify-content: flex-start;
-}
-main > section {
-	padding: 2rem;
-	background: #DDD;
+	width: 100%;
 }
 
+.page-section {
+	padding: 4rem 2rem;
+	width: 100%;
+	display: flex;
+}
+.page-section .container {
+	margin: 0 auto;
+}
+
+/* Feature Section */
+.feature-section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap:1rem;
+	padding: 2rem 0;
+	width: 100%;
+}
+.feature-section .content {
+	display: flex;
+	flex-direction: column;
+	gap: .5rem;
+	max-width: 65ch;
+	color: white;
+}
+.feature-section header {
+	color: white;
+	display: flex;
+	flex-direction: column;
+	gap: .5rem;
+}
+
+.feature-section .body {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+.feature-section .body a {
+	color: var(--color-secondary);
+	transition: color .2s ease-out;
+}
+.feature-section .body a:hover {
+	color: white;
+	text-decoration: underline;
+}
+
+.feature-section .images{
+	padding: 2rem 0;
+}
+.feature-section figure {
+	overflow: hidden;
+	border-radius: var(--rounded-md);
+	margin-left: 2rem;
+}
+
+.feature-section figure:nth-of-type(2) {
+	position: absolute;
+	bottom: -2rem;
+	left: -3rem;
+	box-shadow: rgba(0, 0, 0, .6) .25rem .25rem .5rem;
+}
+.feature-section figure img {
+	width: 100%;
+	max-width: 32rem;
+	min-width: 16rem;
+	height: auto;
+}
+.feature-section figure:nth-of-type(2) img {
+	aspect-ratio: 5/4;
+	object-fit: cover;
+	object-position: center;
+	width: 100%;
+	max-width: 10rem;
+	min-width: 8rem;
+	height: 100%;
+}
+
+.feature-section p {
+	padding-right: 1rem;
+}
+
+@media (min-width: 640px) {
+	.feature-section {
+		flex-direction: row;
+	}
+	.feature-section .images{
+		padding: 0;
+	}
+	.feature-section p {
+		padding-right: 2rem;
+	}
+}
+
+/* Cards Section */
+.cards-section {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	color: black;
+	padding: 2rem 0;
+}
+
+.cards-section header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+}
+
+.cards-section .content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 2rem;
+	width: 100%;
+}
+@media (min-width: 640px) {
+	.cards-section header .cta {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: end;
+	}
+	.cards-section header {
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+	}
+}
+@media (min-width: 768px) {
+	.cards-section .content {
+		flex-direction: row;
+		align-items: flex-start;
+		justify-content: space-between;
+		flex: 1;
+	}
+
+}
+
+/* Card */
+.card {
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	justify-content: start;
+	gap: 1rem;
+	width: 100%;
+	overflow: hidden;
+	padding-bottom: 1rem;
+	border-radius: var(--rounded-lg);
+	box-shadow: var(--shadow-md);
+	background: var(--color-light);
+	transition: all .2s ease-out;
+}
+.card--link {
+	cursor: pointer;
+}
+.card--link:hover {
+	box-shadow: var(--shadow-lg);
+}
+
+.card-image img {
+	width: 100%;
+	aspect-ratio: 4/3;
+	object-fit: cover;
+}
+
+.card-header,
+.card-body,
+.card-footer {
+	padding: 0 1rem;
+}
+.card-body {
+	flex-grow: 1;
+}
+.card-body p {
+	margin-bottom: .5rem;
+}
+@media (min-width: 640px) {
+	.card {
+		align-self: stretch;
+		max-width: 30rem;
+	}
+}
+
+
+/* Booking Modal */
 .modal {
 	width: 100%;
 	max-width: 36rem;
