--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -499,11 +499,13 @@ main {
 .input-group {
 	display: flex;
 	flex-direction: column;
+	gap: .125rem;
 }
 .input-group label {
 	font-weight: 500;
+	color: var(--color-dark);
 }
-.input-group p {
+.input-group > p {
 	color: var(--color-red);
 	display: inline-block;
 	padding: 0 0 0 .25rem;
@@ -511,12 +513,6 @@ main {
 .input-group label > span {
 	color: var(--color-red);
 	font-weight: 500;
-}
-
-.input-group .invalid {
-	color: var(--color-red);
-	border: 2px solid var(--color-red);
-
 }
 .input-group input,
 .input-group select,
@@ -526,8 +522,15 @@ main {
 	border-radius: var(--rounded-md);
 	padding: .5rem 1rem;
 }
-
 .input-group input:placeholder,
 .input-group textarea:placeholder {
 	color: var(--color-medium);
+}
+
+.input-group.invalid input, 
+.input-group.invalid select, 
+.input-group.invalid textarea {
+	color: var(--color-red);
+	border: 2px solid var(--color-red);
+
 }
