--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -501,6 +501,28 @@ main {
 	text-align: center;
 	padding-bottom: 1rem;
 }
+.modal-body {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+.modal .close-button {
+	position: absolute;
+	top: .5rem;
+	right: .5rem;
+	aspect-ratio: 1/1;
+	padding: .5rem;
+	border-radius: var(--rounded-md);
+}
+.modal .close-button:hover {
+	background: var(--color-dark);
+	color: var(--color-light);
+}
+.modal .close-button > svg {
+	color: inherit;
+	width: 1.5rem;
+	height: 1.5rem;
+}
 @media (min-width: 640px) {
 	.modal {
 		width: 100%;
@@ -605,7 +627,6 @@ main {
 	}
 }
 
-
 /* Booking Slots */
 .reservation-option {
 	width: 100%;
@@ -643,3 +664,26 @@ main {
 	display:block;
 	color: var(--color-medium);
 }
+
+/* Resrvation Details */
+.reservation-details {
+	display: flex;
+	flex-direction: column;
+	gap: .5rem;
+	width: 100%;
+	max-width: 24rem;
+	margin: 0 auto;
+	padding: 1rem;
+	border-bottom: 2px solid var(--color-light);
+}
+.reservation-details .item {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+}
+.reservation-details .item .icon {
+	width: 1.5rem;
+	height: 1.5rem;
+	color: var(--color-primary);
+}
+
