--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -140,10 +140,24 @@ body .container {
 	background: transparent;
 	color: black;
 }
-
 .button:disabled {
 	pointer-events: none;
 	opacity: .5;
+}
+
+/* Pills */
+.pill-group {
+	display: flex;
+	align-items: center;
+	gap: .5rem;
+}
+.pill {
+	background: var(--color-light);
+	color: var(--color-dark);
+	border-radius: var(--rounded-full);
+	padding: .25rem .75rem;
+	font-size: 1rem;
+	font-weight: 500;
 }
 
 
@@ -365,14 +379,26 @@ main {
 	gap: 1rem;
 }
 .feature-section .body a:not(.button) {
-	color: var(--color-secondary);
 	transition: color .2s ease-out;
-}
-.feature-section .body a:not(.button):hover {
-	color: white;
 	text-decoration: underline;
+	font-weight: 500;
 }
-
+.feature-section.text-dark .body a:not(.button) {
+	color: var(--color-primary);
+}
+.feature-section.text-white .body a:not(.button),
+.feature-section.text-light .body a:not(.button) {
+	color: var(--color-secondary);
+}
+.feature-section .body ol {
+	list-style: decimal;
+	list-style-position: outside;
+	padding: .5rem 0 .5rem 1rem;
+	max-width: 65ch;
+}
+.feature-section .body ol li {
+	padding-bottom: .5rem;
+}
 .feature-section .images{
 	padding: 2rem 0;
 }
@@ -713,6 +739,11 @@ main {
 }
 
 /* Resrvation Details */
+.details-group {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
 .reservation-details {
 	display: flex;
 	flex-direction: column;
@@ -720,8 +751,38 @@ main {
 	width: 100%;
 	max-width: 24rem;
 	margin: 0 auto;
-	padding: 1rem;
+	padding: 1rem 1rem 1.5rem;
 	border-bottom: 2px solid var(--color-light);
+}
+.reservation-details figure {
+	border-radius: var(--rounded-lg);
+	position:relative;
+	margin-bottom: .5rem;
+	overflow: hidden;
+	box-shadow: var(--shadow-md);
+}
+.reservation-details figure > img {
+	width: 100%;
+	height: auto;
+	object-fit: cover;
+	min-width: 4rem;
+	aspect-ratio: 16/9;
+}
+.reservation-details figure .map-pin {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.reservation-details figure .map-pin svg {
+	width: 2.5rem;
+	height: 2.5rem;
+	color: var(--color-dark);
 }
 .detail-item {
 	display: flex;
