--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -648,6 +648,16 @@ main {
 	}
 }
 
+.booking-form  {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+.booking-form .row {
+	display: flex;
+	align-items: start;
+	gap: 1rem;
+}
 
 /* Forms */
 .input-group {
@@ -713,6 +723,10 @@ main {
 .input-group select.with-icon {
 	padding-left: 3rem;
 }
+.input-group select.with-icon .icon {
+	width: 1.25rem;
+	height: 1.25rem;
+}
 
 #reservations-intro {
 	padding: 1rem 2rem;
@@ -752,7 +766,6 @@ main {
 
 /* Booking Slots */
 .reservation-options {
-	/*  max-w-xl flex flex-col gap-2 mx-auto py-4 */
 	display: flex;
 	flex-direction: column;
 	gap: .5em;
@@ -854,6 +867,7 @@ main {
 	color: var(--color-primary);
 }
 
+/* Reservations Page */
 #reservation-confirmed {
 	padding: 1rem 2rem;
 }
@@ -862,4 +876,12 @@ main {
 }
 #reservation-details .cards-section .content {
 	justify-content: space-between;
+}
+
+/* Error Page */
+#error-page .feature-section {
+	min-height: 60vh;
+}
+#error-page .feature-section .body {
+	padding: 2rem 0;
 }
