--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -20,6 +20,7 @@
 	--border-rounded: .5rem;
 	--rounded-md: .5rem;
 	--rounded-lg: 1rem;
+	--rounded-full: 12rem;
 
 	/* box shadow */
 	--shadow-md: rgba(0,0,0,0.25) .125rem .125rem 6px;
@@ -32,6 +33,11 @@ html, body {
 	width: 100%;
 	min-width: 375px;
 }
+body .container {
+	width: 100%;
+	max-width: 64rem;
+}
+
 
 /* Typography */
 .display-title {
@@ -79,9 +85,11 @@ html, body {
 .button {
 	display: flex;
 	align-items: center;
+	justify-content: center;
+	gap: .5rem;
 	width: max-content;
 	padding: .5rem 1rem;
-	border-radius: var(--rounded-md);
+	border-radius: var(--rounded-full);
 	color: white;
 	background: var(--color-primary);
 	font-weight: 500;
@@ -90,6 +98,10 @@ html, body {
 .button:hover {
 	color: white;
 	background: var(--color-dark);
+}
+.button .icon {
+	width: 1rem;
+	height: 1rem;
 }
 .button--primary{
 	color: white;
@@ -129,12 +141,35 @@ html, body {
 	background: transparent;
 	color: black;
 }
-
 .button:disabled {
 	pointer-events: none;
 	opacity: .5;
 }
 
+/* Pills */
+.pill-group {
+	display: flex;
+	align-items: center;
+	gap: .5rem;
+}
+.pill {
+	background: var(--color-light);
+	color: var(--color-dark);
+	border-radius: var(--rounded-full);
+	padding: .25rem .75rem;
+	font-size: 1rem;
+	font-weight: 500;
+}
+/*  Badge */
+.badge {
+	margin-left: -0.5rem;
+}
+.badge > div {
+	width: .5rem;
+	height: .5rem;
+	border-radius: var(--rounded-full);
+	background-color: var(--color-secondary);
+}
 
 
 /* Header */
@@ -145,10 +180,12 @@ html, body {
 	justify-content: space-between;
 	padding: 1rem;
 	margin: 0 auto;
+	position: relative;
+	z-index: 99;
 }
 .global-header .logo {
 	width: 100%;
-	max-width: 9rem;
+	max-width: 10rem;
 	height: auto;
 }
 .global-header .mobile-links {
@@ -181,6 +218,7 @@ html, body {
 	top: -3rem;
 	right: 0;
 	background: white;
+	z-index: 9999;
 }
 
 .global-header nav.nav--open {
@@ -211,7 +249,7 @@ html, body {
 
 @media (min-width: 768px) {
 	.global-header .logo {
-		max-width: 12rem;
+		width: 12rem;
 	}
 	.global-header .mobile-links {
 		display: none;
@@ -239,7 +277,6 @@ html, body {
 /* Footer */
 .global-footer {
 	width: 100%;
-	padding: 2rem 1rem;
 	background-color: var(--color-light);
 	color: var(--color-dark)
 }
@@ -248,14 +285,18 @@ html, body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	padding: 1rem;
+	padding: 2rem 1rem;
 	margin: 0 auto;
-	gap: 1rem;
+	gap: 2rem;
 }
-
-.global-footer .column h2 {
-	width: 100%;
-	border-bottom: 1px solid var(--color-medium);
+.global-footer .copyright {
+	background-color: var(--color-primary);
+	color: var(--color-light);
+	text-align: center;
+	padding: 1rem 0;
+}
+.global-footer .logo {
+	width: 6rem;
 }
 .global-footer .column {
 	display: flex;
@@ -264,17 +305,20 @@ html, body {
 	justify-content: center;
 	gap: .5rem;
 	text-align: center;
+	width: max-content;
+	max-width: 18rem;
+}
+.global-footer .column h2 {
 	width: 100%;
+	text-transform: uppercase;
+	border-bottom: 1px solid var(--color-medium);
 }
 .global-footer .column a {
 	font-weight: 500;
-	padding: .125rem 0;
+	font-size: 1.125rem;
+	width: 100%;
+	justify-content: center;
 	color: black;
-	display: block;
-}
-.global-footer .column a:hover {
-	color: var(--color-primary);
-	text-decoration: underline;
 }
 @media (min-width: 640px) {
 	.global-footer .container {
@@ -286,6 +330,12 @@ html, body {
 		align-items: start;
 		justify-content: flex-start;
 		text-align: left;
+	}
+	.global-footer .logo {
+		width: 7rem;
+	}
+	.global-footer .column a {
+		justify-content: start;
 	}
 }
 
@@ -339,14 +389,26 @@ main {
 	gap: 1rem;
 }
 .feature-section .body a:not(.button) {
-	color: var(--color-secondary);
 	transition: color .2s ease-out;
-}
-.feature-section .body a:not(.button):hover {
-	color: white;
 	text-decoration: underline;
+	font-weight: 500;
 }
-
+.feature-section.text-dark .body a:not(.button) {
+	color: var(--color-primary);
+}
+.feature-section.text-white .body a:not(.button),
+.feature-section.text-light .body a:not(.button) {
+	color: var(--color-secondary);
+}
+.feature-section .body ol {
+	list-style: decimal;
+	list-style-position: outside;
+	padding: .5rem 0 .5rem 1rem;
+	max-width: 65ch;
+}
+.feature-section .body ol li {
+	padding-bottom: .5rem;
+}
 .feature-section .images{
 	padding: 2rem 0;
 }
@@ -492,6 +554,42 @@ main {
 	}
 }
 
+.testimonial {
+	display: flex;
+	flex-direction: column;
+	gap: .5rem;
+	padding-top: 1rem;
+}
+.testimonial .rating {
+	display: flex;
+	align-items: center;
+}
+.testimonial .star {
+	color: var(--color-medium);
+	width: 1.25rem;
+	height: 1.25rem;
+}
+.testimonial .star.star--filled {
+	color: var(--color-secondary)
+}
+.attribution {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+}
+.attribution img {
+	border-radius: var(--rounded-full);
+	width: 2.5rem;
+	height: 2.5rem;
+	background-color: var(--color-medium);
+}
+.attribution cite {
+	display: flex;
+	flex-direction: column;
+}
+.attribution cite .highlight-text {
+	line-height: .75rem;
+}
 
 /* Booking Modal */
 .modal {
@@ -550,6 +648,16 @@ main {
 	}
 }
 
+.booking-form  {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+.booking-form .row {
+	display: flex;
+	align-items: start;
+	gap: 1rem;
+}
 
 /* Forms */
 .input-group {
@@ -589,9 +697,12 @@ main {
 .input-group textarea {
 	color: var(--color-dark);
 	border: 2px solid var(--color-primary);
-	border-radius: var(--rounded-md);
+	border-radius: var(--rounded-full);
 	padding: .5rem 1rem;
 	width: 100%;
+}
+.input-group textarea {
+	border-radius: var(--rounded-lg);
 }
 .input-group input:placeholder,
 .input-group textarea:placeholder {
@@ -612,6 +723,10 @@ main {
 .input-group select.with-icon {
 	padding-left: 3rem;
 }
+.input-group select.with-icon .icon {
+	width: 1.25rem;
+	height: 1.25rem;
+}
 
 #reservations-intro {
 	padding: 1rem 2rem;
@@ -621,6 +736,10 @@ main {
 }
 #reservations {
 	padding: 1rem;
+}
+#reservations .container {
+	margin: 0 auto;
+	max-width: 36rem;
 }
 
 .reservations-search {
@@ -646,6 +765,14 @@ main {
 }
 
 /* Booking Slots */
+.reservation-options {
+	display: flex;
+	flex-direction: column;
+	gap: .5em;
+	max-width: 36rem;
+	padding: 1rem 0;
+	margin: 0 auto;
+}
 .reservation-option {
 	width: 100%;
 	padding-top: 1rem;
@@ -684,6 +811,11 @@ main {
 }
 
 /* Resrvation Details */
+.details-group {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
 .reservation-details {
 	display: flex;
 	flex-direction: column;
@@ -691,8 +823,38 @@ main {
 	width: 100%;
 	max-width: 24rem;
 	margin: 0 auto;
-	padding: 1rem;
+	padding: 1rem 1rem 1.5rem;
 	border-bottom: 2px solid var(--color-light);
+}
+.reservation-details figure {
+	border-radius: var(--rounded-lg);
+	position:relative;
+	margin-bottom: .5rem;
+	overflow: hidden;
+	box-shadow: var(--shadow-md);
+}
+.reservation-details figure > img {
+	width: 100%;
+	height: auto;
+	object-fit: cover;
+	min-width: 4rem;
+	aspect-ratio: 16/9;
+}
+.reservation-details figure .map-pin {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.reservation-details figure .map-pin svg {
+	width: 2.5rem;
+	height: 2.5rem;
+	color: var(--color-dark);
 }
 .detail-item {
 	display: flex;
@@ -705,6 +867,7 @@ main {
 	color: var(--color-primary);
 }
 
+/* Reservations Page */
 #reservation-confirmed {
 	padding: 1rem 2rem;
 }
@@ -713,4 +876,12 @@ main {
 }
 #reservation-details .cards-section .content {
 	justify-content: space-between;
+}
+
+/* Error Page */
+#error-page .feature-section {
+	min-height: 60vh;
+}
+#error-page .feature-section .body {
+	padding: 2rem 0;
 }
